# okf-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MARKETING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING.md  index.html  robots.txt  sitemap.xml
okf_kit/: __init__.py  bundle_nav.py  bundle_reader.py  cli.py  config.py  crawl.py  enrich.py  mapper.py  mcp.py  model.py  okf.py  registry.py  sync.py  visualize.py  writer.py
okf_kit/chat/: __init__.py  agent.py  history.py  providers.py  repl.py  retrieval.py
okf_kit/fetch/: __init__.py  browser.py  http.py
okf_kit/serve/: __init__.py  app.py  reader.py  run.py  settings.py
tests/: conftest.py  serve_util.py  test_build_integration.py  test_bundle_name_resolution.py  test_bundle_nav.py  test_bundle_reader.py  test_chat.py  test_cli.py  test_content_links.py  test_enrich.py  test_mapper.py  test_mcp.py  test_meta_refresh.py  test_okf.py  test_path_scope.py  test_provider_errors.py  test_registry.py  test_serve.py  test_sync.py  test_visualize.py
tests/fixtures/site/: index.html  redirect.html
tests/fixtures/site/docs/: faq.html  intro.html
tests/fixtures/site/docs/guide/: config.html  install.html
